# TrashManager

./: CMakeLists.txt  README.md  database.cpp  database.h  main.cpp  params.cpp  params.h  system.cpp  system.h
